--- a/portfolio.yml
+++ b/portfolio.yml
@@ -9,6 +9,11 @@ Projects:
     desc: "An Idea board app written in ReactJS that uses the Rails API."
     gitlab: "https://gitlab.com/jbwyatt4/ideaboard-api"
     groups: ['ReactJS', "Ruby on Rails", 'API']
+  wyatt-tech_courses:
+    name: 'Wyatt Tech Courses'
+    desc: "A tech courses site I made to sell my video courses. Stack: Rails 4.2, Bootstrap 3, Nginx, Posgres, Ubuntu, and Amazon Web Services."
+    url: "https://wyatttechcourses.com"
+    groups: ['Ruby on Rails', "Bootstrap"]
   chef_dotfile_manager_tutorial:
     name: "Chef Dotfile Manager Tutorial"
     desc: "Tutorial code for how implemented a simple, yet comprehensive dotfile manager in Chef"
